--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 
 # Test binary, built with `go test -c`
 *.test
+test_linux
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
